# fastforge

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
fast_stack_forge/: __init__.py  cli.py
fast_stack_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fast_stack_forge/commands/: init.py  init_ds_data.py  init_ds_make.py  make_dbt.py  make_sync.py
fast_stack_forge/templates/dashboard/: Accueil.py.j2
fast_stack_forge/templates/dbt/: README.md.j2  dbt_project.yml.j2  example_python_model.py.j2  example_seed.csv.j2  schema.yml.j2
fast_stack_forge/templates/ds_data/: ARCHITECTURE.md.j2  CHANGELOG.md.j2  Dockerfile.api.j2  Dockerfile.app.j2  Makefile.j2  README.md.j2  api_main.py.j2  api_middleware.py.j2  api_router_base.py.j2  api_router_greetings.py.j2  api_router_system.py.j2  core_config.py.j2  core_utils.py.j2  docker_compose.yml.j2  dockerignore.j2  env.example.j2  gitignore.j2  pyproject.toml.j2  streamlit_app.py.j2  test_api.py.j2  test_placeholder.py.j2
fast_stack_forge/templates/entity/: model.py.j2  schema.py.j2
fast_stack_forge/templates/project/: controller.py.j2  limiter.py.j2
fast_stack_forge/templates/sync/: sync_python.py.j2
fastforge/: cli.py
fastforge.egg-info/: SOURCES.txt  entry_points.txt
fastforge/commands/: discard_entity.py  init.py  init_etl.py  make_dashboard.py  make_dbt.py  make_entity.py  make_service.py
fastforge/templates/dbt/: example_snapshot.sql.j2  exposures.yml.j2  profiles.yml.j2
linkedin_rag_app/linkedin_rag/: Makefile  README.md  pyproject.toml  streamlit_app.py
(+58 files in other folders)
