[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastforge"
version = "1.0.0"
description = "CLI toolkit - FastAPI and dbt"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
fastforge = "fastforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastforge*"]

[tool.setuptools.package-data]
fastforge = ["templates/**/*.j2"]
