[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-stack-forge"
version = "1.0.0"
description = "CLI toolkit - Create FastAPI and dbt applications quickly"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
fast-stack-forge = "fast_stack_forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_stack_forge*"]

[tool.setuptools.package-data]
fast_stack_forge = ["templates/**/*.j2"]
